--- a/Vue/Vue项目/travel/package.json
+++ b/Vue/Vue项目/travel/package.json
@@ -14,7 +14,8 @@
     "swiper": "^5.4.5",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^4.1.1",
-    "vue-router": "^3.3.3"
+    "vue-router": "^3.3.3",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
