--- a/Vue/Vue项目/travel/package.json
+++ b/Vue/Vue项目/travel/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "better-scroll": "^1.15.2",
     "core-js": "^2.6.5",
     "less": "^3.11.3",
     "less-loader": "^6.1.2",
