--- a/Vue/Vue项目/commerce/package.json
+++ b/Vue/Vue项目/commerce/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "core-js": "^2.6.5",
     "element-ui": "^2.13.2",
+    "normalize.css": "^8.0.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
