--- a/Vue/Vue项目/music/.prettierrc
+++ b/Vue/Vue项目/music/.prettierrc
@@ -1,10 +1,5 @@
 {
-    "tabWidth": 4,
-    "useTabs": false,
-    "semi": false,
-    "singleQuote": true,
-    "TrailingCooma": "all",
-    "bracketSpacing": true,
-    "jsxBracketSameLine": false,
-    "arrowParens": "avoid"
+  "tabWidth": 2,
+  "semi": false,
+  "singleQuote": true
 }
